# webapp-boilerplate

./: .env.example  .gitignore  .release-please-config.json  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy.yml  release-please.yml
apps/backend/: Dockerfile  Dockerfile.local  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 95d01bda7b63_initial_items_table.py
apps/backend/src/: config.py  lambda_handler.py  main.py  version.py
apps/backend/src/api/routes/: health.py  items.py
apps/backend/src/db/: __init__.py  base.py  session.py
apps/backend/src/db/models/: __init__.py  item.py
apps/backend/src/models/: __init__.py  item.py
apps/backend/src/repositories/: __init__.py  item_repository.py
apps/backend/src/services/: item_service.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  version.ts
apps/web/src/components/layout/: Header.tsx  PageLayout.tsx
apps/web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Toast.tsx
apps/web/src/hooks/: useApi.ts
apps/web/src/lib/: utils.ts
apps/web/src/pages/: HomePage.tsx  ItemListPage.tsx
apps/web/src/services/: api.ts
apps/web/src/stores/: itemStore.ts  uiStore.ts
apps/web/src/types/: index.ts
docker/: Dockerfile.web
infra/: cloudfront.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  rds.tf  route53.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
